--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://admin:admin@localhost:3306/gm_db"
+DATABASE_URL="mysql://root:Password@localhost:3306/gm_db"
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET="jwtSecret"
