--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "3.15.2",
+    "@types/axios": "^0.14.0",
     "@types/multiparty": "^0.0.33",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
