--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@prisma/client": "3.15.2",
     "bcrypt": "^5.0.1",
+    "framer-motion": "^6.3.15",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "next": "12.1.6",
     "next-auth": "^4.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "siwe": "^1.1.6"
+    "siwe": "^1.1.6",
+    "swiper": "^8.2.4"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -29,6 +31,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/swiper": "^6.0.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
