--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ DATABASE_URL="mysql://admin:admin@localhost:3306/gm_db"
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET="jwtSecret"
-NEXTAPI_URL =http://localhost:3000/api
+NEXT_PUBLIC_NEXTAPI_URL =http://localhost:3000/api
