--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "3.15.2",
     "@types/axios": "^0.14.0",
     "@types/multiparty": "^0.0.33",
+    "add": "^2.0.6",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "framer-motion": "^6.3.16",
@@ -25,7 +26,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pageflip": "^2.0.3",
-    "siwe": "^1.1.6"
+    "react-toast-notifications": "^2.5.1",
+    "siwe": "^1.1.6",
+    "swiper": "^8.2.5",
+    "yarn": "^1.22.19"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
