--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-connect": "^0.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modern-drawer": "^1.1.1",
     "react-pageflip": "^2.0.3",
     "react-toast-notifications": "^2.5.1",
     "siwe": "^1.1.6",
