--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "add": "^2.0.6",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "date-fns": "^2.28.0",
+    "draft-js": "^0.11.7",
     "framer-motion": "^6.3.16",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -27,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-modern-drawer": "^1.1.1",
     "react-pageflip": "^2.0.3",
+    "react-tailwind-table": "^1.1.1",
     "react-toast-notifications": "^2.5.1",
     "siwe": "^1.1.6",
     "swiper": "^8.2.5",
@@ -37,6 +40,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/draft-js": "^0.11.9",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
     "@types/node": "18.0.0",
