--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "3.15.2",
     "@types/axios": "^0.14.0",
     "@types/multiparty": "^0.0.33",
+    "@types/react-rte": "^0.16.3",
     "add": "^2.0.6",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
@@ -30,8 +31,10 @@
     "react-dom": "18.2.0",
     "react-modern-drawer": "^1.1.1",
     "react-pageflip": "^2.0.3",
+    "react-rte": "^0.16.5",
     "react-tailwind-table": "^1.1.1",
     "react-toast-notifications": "^2.5.1",
+    "rich-text-editor": "^7.0.2",
     "siwe": "^1.1.6",
     "swiper": "^8.2.5",
     "yarn": "^1.22.19"
