--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-connect": "^0.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-file-base64": "^1.0.3",
     "react-modern-drawer": "^1.1.1",
     "react-pageflip": "^2.0.3",
     "react-rte": "^0.16.5",
