--- a/.env
+++ b/.env
@@ -1,11 +1,5 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="mysql://root:password@localhost:3306/gm_db"
+DATABASE_URL="mysql://root:Password@localhost:3306/gm_db"
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET="jwtSecret"
-NEXT_PUBLIC_NEXTAPI_URL =http://localhost:3000/api
+NEXT_PUBLIC_NEXTAPI_URL ="http://192.168.1.74:3000/api"
