--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-file-base64": "^1.0.3",
     "react-modern-drawer": "^1.1.1",
     "react-pageflip": "^2.0.3",
+    "react-quill": "^1.3.5",
     "react-redux": "^8.0.2",
     "react-rte": "^0.16.5",
     "react-tailwind-table": "^1.1.1",
