--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-rte": "^0.16.5",
     "react-tailwind-table": "^1.1.1",
     "react-toast-notifications": "^2.5.1",
+    "react-typescript-raw-html": "^0.0.9",
     "rich-text-editor": "^7.0.2",
     "siwe": "^1.1.6",
     "slate": "^0.81.1",
