--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# LOCAL မှာ လုပ်ရင် ဒါသုံးပါ
+# DATABASE_URL="mysql://admin:admin@localhost:3306/gm_db"
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+# Database Server နဲ့လုပ်ရင် ဒါသုံးပါ
 DATABASE_URL="mysql://yhtdev:yhtadmin123@175.41.134.234:3306/gm_db"
+
+# Data ဝိုင်းထည့်ရင် ip ပြောင်းပါ
+NEXT_PUBLIC_NEXTAPI_URL =http://172.20.10.4:3000
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET="jwtSecret"
-NEXT_PUBLIC_NEXTAPI_URL =http://localhost:3000/api
