--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # LOCAL မှာ လုပ်ရင် ဒါသုံးပါ
-# DATABASE_URL="mysql://admin:admin@localhost:3306/gm_db"
+DATABASE_URL="mysql://admin:admin@localhost:3306/gm_db"
 
 # Database Server နဲ့လုပ်ရင် ဒါသုံးပါ
-DATABASE_URL="mysql://yhtdev:yhtadmin123@175.41.134.234:3306/gm_db"
+# DATABASE_URL="mysql://yhtdev:yhtadmin123@175.41.134.234:3306/gm_db"
 
 # Data ဝိုင်းထည့်ရင် ip ပြောင်းပါ
-NEXT_PUBLIC_NEXTAPI_URL =http://172.20.10.4:3000
+NEXT_PUBLIC_NEXTAPI_URL =http://192.168.1.84:3000
 
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://192.168.1.84:3000
 NEXTAUTH_SECRET="jwtSecret"
