--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# LOCAL မှာ လုပ်ရင် ဒါသုံးပါ
+# # LOCAL မှာ လုပ်ရင် ဒါသုံးပါ
 DATABASE_URL="mysql://admin:admin@localhost:3306/gm_db"
 
 # Database Server နဲ့လုပ်ရင် ဒါသုံးပါ
